--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			
 		  <div id="caja2"> 
 			  <div id="img1">
-				  <a href="https://www.amazon.com/-/es/Nintendo-Switch-consola-Disponibles-cantidades-limitadas/dp/B098RKWHHZ/ref=sr_1_6?crid=2S5PBJUGSVDEJ&dib=eyJ2IjoiMSJ9.PimUJ_hYTYprDba1JCCTwEYZh4eBAlQCYTVhgKB2OcBRvmU0mFEeyIFeDjCeWOq8eYMvDfMZK_Agtsb5fviuUgM0L9kcNTMKbGO0pgSPkk1FKtsI_A0NIeGrlT_lauQFgSefzTa_i3noX1cUKI7NJ9v1xVDr7Cdhaqn733VlA0ytI_84Zex4XvV_sxO5Zbvdovkxtbn7kUGqhTa45h1uUqsYbmw1WtgDFRQ9gFI8-6g.ME740W23BrcHvXriOUZ_WVx70exTayUCdGYcHybMv5Q&dib_tag=se&keywords=nintendo+switch+2&qid=1747252157&sprefix=nintendo+switch+,aps,240&sr=8-6&th=1"><img src="img/publicidad.jpg" width="340" height="340" alt="publicidad"/></a>
+				  <a href="https://www.amazon.com/-/es/Nintendo-Switch-consola-Disponibles-cantidades-limitadas/dp/B098RKWHHZ/ref=sr_1_6?crid=2S5PBJUGSVDEJ&dib=eyJ2IjoiMSJ9.PimUJ_hYTYprDba1JCCTwEYZh4eBAlQCYTVhgKB2OcBRvmU0mFEeyIFeDjCeWOq8eYMvDfMZK_Agtsb5fviuUgM0L9kcNTMKbGO0pgSPkk1FKtsI_A0NIeGrlT_lauQFgSefzTa_i3noX1cUKI7NJ9v1xVDr7Cdhaqn733VlA0ytI_84Zex4XvV_sxO5Zbvdovkxtbn7kUGqhTa45h1uUqsYbmw1WtgDFRQ9gFI8-6g.ME740W23BrcHvXriOUZ_WVx70exTayUCdGYcHybMv5Q&dib_tag=se&keywords=nintendo+switch+2&qid=1747252157&sprefix=nintendo+switch+,aps,240&sr=8-6&th=1"><img src="publicidad.jpg" width="340" height="340" alt="publicidad"/></a>
 			  </div><!--cierra div img1-->
 			   </div><!--cierra caja2-->
         </div> <!--cierra centro-->
@@ -53,3 +53,4 @@
 </div> <!--cierra contenedor-->
 </body>
 </html>
+
