--- a/videojuegos.html
+++ b/videojuegos.html
@@ -1,4 +1,4 @@
-q<!doctype html>
+<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -57,3 +57,4 @@ q<!doctype html>
 </div> <!--cierra contenedor-->
 </body>
 </html>
+
